fix(Sell): aligns checkbox

--- a/assets/css/elements/_forms.scss
+++ b/assets/css/elements/_forms.scss
@@ -38,4 +38,9 @@ form.bc-form {
       }
     }
   }
+  .multi-line-check {
+    input[type="checkbox"] {
+      margin: 5px 10px 0px 0px !important;
+    }
+  }
 }
